--- a/src/components/SP/mission.css
+++ b/src/components/SP/mission.css
@@ -1,105 +1,105 @@
 body {
-    font-family: 'Arial', sans-serif;
-    line-height: 1.6;
-    background-color: linear-gradient(to left, #fff, rgba(255, 255, 255, 0));;
-    margin: 0;
-    padding: 0;
+  font-family: "Arial", sans-serif;
+  line-height: 1.6;
+  background-color: linear-gradient(to left, #fff, rgba(255, 255, 255, 0));
+  margin: 0;
+  padding: 0;
 }
 
-.mission-cont{
-    display: flex;
-    align-items: center;
-    margin: 80px auto 50px;
-    margin-top: 50px;
-    border: 1px solid #ccc;
-    border-radius: 10px;
-    padding: 20px;
-    background-color: #fff;
-    max-width: 800px;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+.mission-cont {
+  display: flex;
+  align-items: center;
+  margin: 80px auto 50px;
+  margin-top: 50px;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  padding: 20px;
+  background-color: #fff;
+  max-width: 800px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-.mission-cont2{
-    display: flex;
-    align-items: center;
-    margin: 80px auto 50px;
-    margin-top: 50px;
-    border: 1px solid #ccc;
-    border-radius: 10px;
-    padding: 20px;
-    background-color: #fff;
-    max-width: 85%;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+.mission-cont2 {
+  display: flex;
+  align-items: center;
+  margin: 80px auto 50px;
+  margin-top: 50px;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  padding: 20px;
+  background-color: #fff;
+  max-width: 85%;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .mission {
-    flex: 1;
+  flex: 1;
 }
 
-.mission h1{
-    margin: 0;
+.mission h1 {
+  margin: 0;
 }
 
-.mission p{
-    margin:0;
-    padding-top: 10px;
-    margin-right: 10px;
-}
-  
-.mission-img{
-    width:100px;
-    height:100px;
-    object-fit:cover;
-    margin-left:50px;
+.mission p {
+  margin: 0;
+  padding-top: 10px;
+  margin-right: 10px;
 }
 
-.ebc{
-    margin: auto auto 10px;
-    padding: 20px;
-    max-width: 85%;
-    background-color: #fff;
-    border: 1px solid #ccc;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+.mission-img {
+  width: 100px;
+  height: 100px;
+  object-fit: cover;
+  margin-left: 50px;
+}
+
+.ebc {
+  margin: auto auto 10px;
+  padding: 20px;
+  max-width: 85%;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .exec-board-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
-.exec-board-title{
-    font-size:35px;
-    text-align:center;
-    margin-bottom:-5px;
+.exec-board-title {
+  font-size: 35px;
+  text-align: center;
+  margin-bottom: -5px;
 }
 
 .exec-board-item {
-    width: 300px;
-    margin: 25px;
-    padding: 20px;
-    background-color: #f0f0f0;
-    border: 1px solid #ccc;
-    border-radius: 10px;
-    box-sizing: border-box;
-    text-align: center;
+  width: 300px;
+  margin: 25px;
+  padding: 20px;
+  background-color: #f0f0f0;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  box-sizing: border-box;
+  text-align: center;
 }
 
 .exec-board-item h2,
 .exec-board-item h3,
 .exec-board-item p {
-    margin: 0;
-    /* padding: 10px 0; */
+  margin: 0;
+  /* padding: 10px 0; */
 }
 
 .exec-board-img {
-    width: 150px;
-    height: 150px;
-    border-radius: 20px;
-    object-fit: cover;
+  width: 150px;
+  height: 150px;
+  border-radius: 20px;
+  object-fit: cover;
 }
 
-.chosen-cont{
-    align-items:center;
+.chosen-cont {
+  align-items: center;
 }
