--- a/src/components/SP/phone-only-salespitch.css
+++ b/src/components/SP/phone-only-salespitch.css
@@ -8,7 +8,7 @@
   padding: 20px;
   background-color: #fff;
   max-width: 85%;
-  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   text-align: center;
 }
 
@@ -23,4 +23,3 @@
   width: 100px;
   height: 100px;
 }
-  
