--- a/src/App.css
+++ b/src/App.css
@@ -62,6 +62,13 @@
 }
 
 @font-face {
+  font-family: "Courier Prime";
+  src: url("./fonts/Courier_Prime/CourierPrime-Regular.ttf") format("truetype");
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
   font-family: "Roboto-Regular";
   src: url("./fonts/Roboto/Roboto-Regular.ttf") format("truetype");
   font-weight: 400;
@@ -130,9 +137,13 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 .dev-album-or-song-art-item {
-  width: 500;
-  height: 500;
+  padding: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: vertical;
+  flex-direction: column;
 }
