--- a/src/imgs/IS/ImageScroller.css
+++ b/src/imgs/IS/ImageScroller.css
@@ -7,13 +7,14 @@
 
 body {
   overflow-x: hidden;
+  position: "fixed";
 }
 
 .logos {
   overflow: hidden;
   padding-top: 60px;
   padding-bottom: 30px;
-  position: relative;
+  position: fixed;
 }
 
 .logos:before,
@@ -40,7 +41,6 @@ body {
   display: flex;
   animation: infiniteScroll 100s linear infinite;
   will-change: transform;
-  /* margin-bottom: 10px; */
   margin-bottom: -20px;
 }
 
@@ -49,7 +49,6 @@ body {
   width: 200px;
   flex-shrink: 0;
   object-fit: cover;
-  /* margin-right: -0; */
   user-select: none;
   pointer-events: none;
   filter: opacity(0.5);
