--- a/src/components/SP/mission.css
+++ b/src/components/SP/mission.css
@@ -1,7 +1,7 @@
 body {
   font-family: "Arial", sans-serif;
   line-height: 1.6;
-  background-color: linear-gradient(to left, #fff, rgba(255, 255, 255, 0));
+  /* background-color: linear-gradient(to left, #fff, rgba(255, 255, 255, 0)); */
   margin: 0;
   padding: 0;
 }
@@ -50,7 +50,7 @@ body {
   width: 150px;
   height: 150px;
   object-fit: cover;
-  margin-left: 50px;
+  /* margin-left: 50px; */
 }
 
 .ebc {
