--- a/src/imgs/IS/ImageScroller.css
+++ b/src/imgs/IS/ImageScroller.css
@@ -7,7 +7,7 @@
 
 body {
   overflow-x: hidden;
-  position: "fixed";
+  /* position: "fixed"; */
 }
 
 .logos {
@@ -26,7 +26,7 @@ body {
   content: "";
   z-index: 2;
 }
-
+/* 
 .logos:before {
   left: 0;
   background: linear-gradient(to right, #fff, rgba(255, 255, 255, 0));
@@ -35,13 +35,14 @@ body {
 .logos:after {
   right: 0;
   background: linear-gradient(to left, #fff, rgba(255, 255, 255, 0));
-}
+} */
 
 .logos-slide {
   display: flex;
   animation: infiniteScroll 100s linear infinite;
   will-change: transform;
   margin-bottom: -20px;
+  filter: opacity(0.8);
 }
 
 .logos-slide img {
