--- a/src/components/BLOG/blog.css
+++ b/src/components/BLOG/blog.css
@@ -27,3 +27,22 @@
 .blog-items {
   width: 350px;
 }
+
+.spotify-playlists {
+  width: 200px;
+  margin: 5px;
+  /* margin: 10px;
+padding: 10px 10px 10px 20px; */
+  background-color: white;
+  border: 1px solid black;
+  border-radius: 10px;
+  /* box-sizing: border-box; */
+  text-align: center;
+}
+
+.spotify-cont {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+}
