--- a/src/components/SP/mission.css
+++ b/src/components/SP/mission.css
@@ -63,6 +63,12 @@ body {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
+.club-photo-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
 .exec-board-container {
   display: flex;
   flex-wrap: wrap;
@@ -92,6 +98,18 @@ body {
   margin: 0;
 }
 
+.picks-history {
+  width: 150px;
+  margin: 5px;
+  /* margin: 10px;
+  padding: 10px 10px 10px 20px; */
+  background-color: #f0f0f0;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  box-sizing: border-box;
+  text-align: center;
+}
+
 .exec-board-img {
   width: 150px;
   height: 150px;
@@ -99,6 +117,19 @@ body {
   object-fit: cover;
 }
 
+.club-photo-img {
+  width: 100;
+  height: 100;
+  border-radius: 20px;
+  object-fit: cover;
+}
+
 .chosen-cont {
   align-items: center;
+}
+
+.song-of-the-week-picks-cont {
+  font-weight: "bold";
+  margin-bottom: 30;
+  margin-top: 10;
 }
