giving header2 some padding

--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,9 @@
 
 .header2 {
   padding-bottom: 0px;
+  text-align: center;
+  padding-left: 10;
+  padding-right: 10;
 }
 
 @media (prefers-reduced-motion: no-preference) {
