--- a/src/components/SP/mission.css
+++ b/src/components/SP/mission.css
@@ -50,7 +50,14 @@ body {
   width: 150px;
   height: 150px;
   object-fit: cover;
-  /* margin-left: -10px; */
+  margin-top: -20px;
+}
+
+.thingghost-insta-link {
+  margin-top: -10px;
+  margin-bottom: -20px;
+  text-align: "center";
+  font-size: 15px;
 }
 
 .ebc {
