--- a/src/App.css
+++ b/src/App.css
@@ -91,8 +91,9 @@
   margin-bottom: 5px;
 }
 
+/* TODO: Instead of .faq and .faq2, I could use variables for the max-width */
 .faq {
-  margin: auto auto auto auto;
+  margin: auto;
   border: 1px solid #ccc;
   border-radius: 10px;
   padding: 20px;
@@ -102,7 +103,7 @@
 }
 
 .faq2 {
-  margin: auto auto auto auto;
+  margin: auto;
   border: 1px solid #ccc;
   border-radius: 10px;
   padding: 20px;
