--- a/src/components/SP/mission.css
+++ b/src/components/SP/mission.css
@@ -155,3 +155,30 @@ body {
   margin-bottom: 30;
   margin-top: 10;
 }
+
+.this-weeks-picks {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-top: 0;
+  margin-bottom: 1.25rem;
+  color: gray;
+}
+
+.box-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-top: 0;
+  margin-bottom: 2rem;
+}
+
+.pick-type-bold.margin-bottom-34 {
+  margin-bottom: 34px;
+  margin-top: 10px;
+}
+
+.pick-image {
+  width: 90%;
+  border-radius: 10px;
+}
