--- a/src/components/SP/mission.css
+++ b/src/components/SP/mission.css
@@ -160,6 +160,8 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  align-items: center;
+  text-align: center;
   margin-top: 0;
   margin-bottom: 1.25rem;
   color: gray;
