--- a/src/App.css
+++ b/src/App.css
@@ -103,6 +103,10 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
+iframe {
+  position: relative;
+  z-index: 10;
+}
 .faq2 {
   margin: auto;
   margin-bottom: 60px;
