--- a/src/components/BLOG/blog.css
+++ b/src/components/BLOG/blog.css
@@ -15,7 +15,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center; /* Optional: Center items horizontally */
-  gap: 30px;
+  gap: 20px;
   /* font-family: "Roboto-Regular"; */
   font-weight: normal !important;
 }
@@ -25,7 +25,35 @@
   padding-bottom: 10px;
 }
 .blog-items {
-  width: 150px;
+  width: 100px;
+}
+.blog-items-cont2 {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  width: 100%; /* Ensures it takes full available space */
+}
+.blog-items2 {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center; /* Align items vertically */
+  gap: 15px; /* Space between image and text */
+  width: auto;
+  margin-right: 12px;
+  margin-top: 3px;
+  margin-bottom: 3px;
+}
+
+.blog-items2 img {
+  width: 50px; /* Adjust image size */
+  height: auto;
+  margin-right: -10px;
+}
+
+.blog-items2 .text-content {
+  flex: 1; /* Allow text to take remaining space */
 }
 
 .spotify-playlists {
