--- a/src/components/BLOG/blog.css
+++ b/src/components/BLOG/blog.css
@@ -11,35 +11,25 @@
   font-weight: normal !important;
 }
 
-.blog-items-cont {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center; /* Optional: Center items horizontally */
-  gap: 20px;
-  /* font-family: "Roboto-Regular"; */
-  font-weight: normal !important;
-}
 .blog-titles {
   text-align: center;
   font-size: 35px;
   padding-bottom: 10px;
 }
-.blog-items {
-  width: 100px;
-}
+
 .blog-items-cont2 {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
-  width: 100%; /* Ensures it takes full available space */
+  width: 100%;
 }
 .blog-items2 {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  align-items: center; /* Align items vertically */
-  gap: 15px; /* Space between image and text */
+  align-items: center;
+  gap: 15px;
   width: auto;
   margin-right: 12px;
   margin-top: 3px;
@@ -47,12 +37,40 @@
 }
 
 .blog-items2 img {
-  width: 50px; /* Adjust image size */
+  width: 50px;
   height: auto;
   margin-right: -10px;
 }
 
 .blog-items2 .text-content {
+  flex: 1;
+}
+
+.blog-items-cont3 {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  gap: 10px;
+}
+.blog-items3 {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center; /* Align items vertically */
+  gap: 15px; /* Space between image and text */
+  width: 250px;
+  margin-right: 12px;
+}
+
+.blog-items3 img {
+  width: 60px; /* Adjust image size */
+  height: auto;
+  margin-right: -10px;
+}
+
+.blog-items3 .text-content {
   flex: 1; /* Allow text to take remaining space */
 }
 
