--- a/src/components/SP/mission.css
+++ b/src/components/SP/mission.css
@@ -122,6 +122,16 @@ body {
   text-align: center;
 }
 
+.picks-history-mobile {
+  width: 115px;
+  margin: 10px;
+  background-color: #f0f0f0;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  box-sizing: border-box;
+  text-align: center;
+}
+
 .aoty {
   width: 150px;
   margin: 10px;
